k8s/crypto-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crypto-backend-deployment
  labels:
    app: crypto-backend
spec:
  replicas: 10
  selector:
    matchLabels:
      app: crypto-backend
  template:
    metadata:
      labels:
        app: crypto-backend
    spec:
      containers:
        - name: crypto-backend
          image: crypto-backend:latest
          ports:
            - containerPort: 4000
