k8s/crypto-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crypto-backend-service
spec:
  selector:
    app: crypto-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
  type: ClusterIP
