k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crypto-backend-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: crypto-backend-service
                port:
                  number: 80
